@@ -585,56 +585,97 @@ REST API Methods
 
     followers
 
-        Parameters: id, user_id, screen_name, page
+        Parameters: id, user_id, screen_name, cursor
         Required: *none*
 
-        Returns the authenticating user's followers, each with current
-        status inline. They are ordered by the order in which they joined
-        Twitter (this is going to be changed).
+        Returns a reference to an array of the user's followers. If "id",
+        "user_id", or "screen_name" is not specified, the followers of the
+        authenticating user are returned. The returned users are ordered
+        from most recently followed to least recently followed.
 
-        Returns 100 followers per page.
+        Use the optional "cursor" parameter to retrieve users in pages of
+        100. When the "cursor" parameter is used, the return value is a
+        reference to a hash with keys "previous_cursor", "next_cursor", and
+        "users". The value of "users" is a reference to an array of the
+        user's friends. The result set isn't guaranteed to be 100 every time
+        as suspended users will be filtered out. Set the optional "cursor"
+        parameter to -1 to get the first page of users. Set it to the prior
+        return's value of "previous_cursor" or "next_cursor" to page forward
+        or backwards. When there are no prior pages, the value of
+        "previous_cursor" will be 0. When there are no subsequent pages, the
+        value of "next_cursor" will be 0.
 
-        Returns: ArrayRef[BasicUser]
+        Returns: HashRef|ArrayRef[User]
 
     followers_ids
     followers_ids(id)
 
-        Parameters: id, user_id, screen_name, page
+        Parameters: id, user_id, screen_name, cursor
         Required: id
 
-        Returns an array of numeric IDs for every user is followed by.
+        Returns a reference to an array of numeric IDs for every user
+        following the specified user.
 
-        Returns: ArrayRef[Int]
+        Use the optional "cursor" parameter to retrieve IDs in pages of
+        5000. When the "cursor" parameter is used, the return value is a
+        reference to a hash with keys "previous_cursor", "next_cursor", and
+        "ids". The value of "ids" is a reference to an array of IDS of the
+        user's followers. Set the optional "cursor" parameter to -1 to get
+        the first page of IDs. Set it to the prior return's value of
+        "previous_cursor" or "next_cursor" to page forward or backwards.
+        When there are no prior pages, the value of "previous_cursor" will
+        be 0. When there are no subsequent pages, the value of "next_cursor"
+        will be 0.
+
+        Returns: HashRef|ArrayRef[Int]
 
     friends
     alias: following
 
-        Parameters: id, user_id, screen_name, page
+        Parameters: id, user_id, screen_name, cursor
         Required: *none*
 
-        Returns the authenticating user's friends, each with current status
-        inline. They are ordered by the order in which they were added as
-        friends. It's also possible to request another user's recent friends
-        list via the id parameter.
+        Returns a reference to an array of the user's friends. If "id",
+        "user_id", or "screen_name" is not specified, the friends of the
+        authenticating user are returned. The returned users are ordered
+        from most recently followed to least recently followed.
 
-        Returns 100 friends per page.
+        Use the optional "cursor" parameter to retrieve users in pages of
+        100. When the "cursor" parameter is used, the return value is a
+        reference to a hash with keys "previous_cursor", "next_cursor", and
+        "users". The value of "users" is a reference to an array of the
+        user's friends. The result set isn't guaranteed to be 100 every time
+        as suspended users will be filtered out. Set the optional "cursor"
+        parameter to -1 to get the first page of users. Set it to the prior
+        return's value of "previous_cursor" or "next_cursor" to page forward
+        or backwards. When there are no prior pages, the value of
+        "previous_cursor" will be 0. When there are no subsequent pages, the
+        value of "next_cursor" will be 0.
 
-        Returns: ArrayRef[BasicUser]
+        Returns: Hashref|ArrayRef[User]
 
     friends_ids
     friends_ids(id)
     alias: following_ids
 
-        Parameters: id, user_id, screen_name, page
+        Parameters: id, user_id, screen_name, cursor
         Required: id
 
-        Returns an array of numeric IDs for every user the specified user is
-        following.
+        Returns a reference to an array of numeric IDs for every user
+        followed the specified user.
 
-        Currently, Twitter returns IDs ordered from most recently followed
-        to least recently followed. This order may change at any time.
+        Use the optional "cursor" parameter to retrieve IDs in pages of
+        5000. When the "cursor" parameter is used, the return value is a
+        reference to a hash with keys "previous_cursor", "next_cursor", and
+        "ids". The value of "ids" is a reference to an array of IDS of the
+        user's friends. Set the optional "cursor" parameter to -1 to get the
+        first page of IDs. Set it to the prior return's value of
+        "previous_cursor" or "next_cursor" to page forward or backwards.
+        When there are no prior pages, the value of "previous_cursor" will
+        be 0. When there are no subsequent pages, the value of "next_cursor"
+        will be 0.
 
-        Returns: ArrayRef[Int]
+        Returns: HashRef|ArrayRef[Int]
 
     friends_timeline
     alias: following_timeline
