@@ -25,25 +25,24 @@ DateTime
 DirectMessage
 ExtendedUser
 Grennan
-Identi
 IM
-InflateObjects
 IP
 IRC
+Identi
+InflateObjects
 JSON
 Laconica
 Marc
 Mims
 Miyagawa
-netrc
 OAuth
 OMG
-oauth
 Prather
 RateLimitStatus
-refactored
-SavedSearch
+Retweets
 SMS
+SSL
+SavedSearch
 Str
 Tatsuhiko
 Twitter
@@ -65,17 +64,19 @@ identica
 inline
 lang
 multipart
+netrc
+oauth
 ok
 params
 perigrin
+refactored
 requester's
+return's
 retweet
 retweeted
 retweeting
-Retweets
 retweets
 rpp
-SSL
 ssl
 stringifies
 timeline
