@@ -1,3 +1,5 @@
+    - Documented the cursor parameter for friends, followers, friends_ids, and
+      followers_ids.
     - Fixed: synthetic since parameter (could fail with multiple API traits defined)
     - Added support for since in YYYY-MM-DD format
 
